Add Home screen news section with card layout and adapter
- Added HomeItem data class
- Added HomeData with initial home/news items
- Created card_container.xml for reusable home cards
- Implemented HomeAdapter for rendering cards
- Integrated HomeAdapter and RecyclerView into HomeActivity
- Added home_title TextView and connected data
- Updated layout of HomeActivity to include news/home cards section
- Added Instagram/Facebook icons to popup and hooked up click listeners
- General layout cleanup and XML refactoring

--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -8,6 +8,13 @@
     <string name="desc_item">Bild på menyitem</string>
     <string name="text_tagline">Äkta italienska smaker gjorda med kärlek</string>
 
+    <string name="home_title">Välkommen</string>
+    <string name="home_item_2_title">Nya desserter</string>
+    <string name="home_item_2_desc">Testa vår krämiga pannacotta eller klassiska tiramisù.</string>
+
+    <string name="home_item_3_title">Säsongens drycker</string>
+    <string name="home_item_3_desc">Fräscha sommardrinkar finns nu på menyn.</string>
+
     <!-- ===== POPUP INFO ============================================ -->
 
     <string name="popup_title">Om Casa di Luca</string>
