--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -9,11 +9,11 @@
     <string name="text_tagline">Äkta italienska smaker gjorda med kärlek</string>
 
     <string name="home_title">Välkommen</string>
-    <string name="home_item_2_title">Nya desserter</string>
-    <string name="home_item_2_desc">Testa vår krämiga pannacotta eller klassiska tiramisù.</string>
+    <string name="home_item_1_title">Platshållartitel 1</string>
+    <string name="home_item_1_desc">Kort beskrivning för platshållarinnehåll.</string>
 
-    <string name="home_item_3_title">Säsongens drycker</string>
-    <string name="home_item_3_desc">Fräscha sommardrinkar finns nu på menyn.</string>
+    <string name="home_item_2_title">Platshållartitel 2</string>
+    <string name="home_item_2_desc">Ytterligare exempeltext för beskrivning.</string>
 
     <!-- ===== POPUP INFO ============================================ -->
 
