- Added dual horizontal sections on Home (Welcome + News) - Implemented ScrollView wrapping vertical content - Ensured both RecyclerViews support smooth horizontal scrolling - Added bottom navigation bar (Home / Drinks / Food) - Connected navigation actions to MenuActivity via intents - Cleaned layout structure with outer container for footer - Updated card_home_container with new dimens and proportions - Adjusted dimens for card sizes, padding, margins and renamed elevation - Updated HomeData with placeholder items and new images - Updated HomeActivity with new recyclers, adapters and nav handling - Removed unused scrollbars and enabled smoother gesture scrolling - Minor fixes: text placement, container spacing, cleanup of old references

--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -8,7 +8,11 @@
     <string name="desc_item">Bild på menyitem</string>
     <string name="text_tagline">Äkta italienska smaker gjorda med kärlek</string>
 
-    <string name="home_title">Välkommen</string>
+    <string name="home_welcome_title">Välkommen</string>
+    <string name="home_welcome_subtitle">Vill du börja med något gott?</string>
+
+    <string name="home_news_title">Nyheter på menyn</string>
+
     <string name="home_item_1_title">Platshållartitel 1</string>
     <string name="home_item_1_desc">Kort beskrivning för platshållarinnehåll.</string>
 
@@ -77,4 +81,10 @@
 
     <string name="item_name_dessert_3">Citronsorbet</string>
     <string name="item_desc_dessert_3">Uppfriskande sorbet med siciliansk citron</string>
+
+    <!-- ===== NAV-FOOTER =========================================== -->
+
+    <string name="nav_home">Hem</string>
+    <string name="nav_drinks">Dryck</string>
+    <string name="nav_food">Mat</string>
 </resources>
